fixed checkout page elements being hidden if its too long + clipping of hover effects

--- a/src/pages/store/checkout/checkout.css
+++ b/src/pages/store/checkout/checkout.css
@@ -1,9 +1,10 @@
 #main-content {
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: flex-start;
     gap: 50px;
     flex-direction: row;
+
 }
 #order-summary {
     background-color: var(--primary-card-color);
@@ -22,10 +23,6 @@
     padding: 10px;
     color: black;
 }
-#payment-element {
-    overflow-y: auto;
-    max-height: 300px;
-}
 #stripe-content {
     flex-grow: 1;
     display: flex;
@@ -37,7 +34,7 @@
     width: 80vw;
     flex-grow: 1;
     flex-direction: column;
-    height: 675px;
+    min-height: 675px;
     display: flex;
     flex-shrink: 1;
     border-radius: 10px;
